Fixed overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -14,6 +14,11 @@
   }
 }
 
+html{
+  overflow: auto!important;
+  padding: 0!important;
+}
+
 body {
   color: var(--foreground);
   background: var(--background);
